# libstreamvbyte

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
benchmarks/: benchmark.cpp
include/: branch_prediction.h  decode_shuffle_table.h  encode_shuffle_table.h  streamvbyte.h
libstreamvbyte/: decode_shuffle_table.h
libstreamvbyte/encode/: encode_scalar.hpp
libstreamvbyte/util/: encode_shuffle_table_generator.cpp
src/: branch_prediction.h  config.h.in  decode_shuffle_table.h  encode_shuffle_table.h  length_table.h  streamvbyte.cpp  streamvbyte_encode.cpp
src/decode/: decode.cpp  decode_scalar.hpp  decode_ssse3.hpp  decode_streamvbyte.cpp  decode_streamvbyte_scalar.hpp  decode_streamvbyte_ssse3.hpp  decode_zigzag.cpp  decode_zigzag_scalar.hpp  decode_zigzag_ssse3.hpp  streamvbyte_decode.cpp  streamvbyte_decode_scalar.hpp  streamvbyte_decode_ssse3.hpp  streamvbyte_decode_vectorized.hpp  zigzag_decode.cpp  zigzag_decode_scalar.hpp  zigzag_decode_ssse3.hpp  zigzag_decode_vectorized.hpp
src/encode/: encode.cpp  encode_scalar.hpp  encode_shuffle_table.h  encode_ssse3.hpp  encode_streamvbyte.cpp  encode_streamvbyte_scalar.hpp  encode_streamvbyte_ssse3.hpp  encode_zigzag.cpp  encode_zigzag_scalar.hpp  encode_zigzag_ssse3.hpp  streamvbyte_encode.cpp  streamvbyte_encode_scalar.hpp  streamvbyte_encode_ssse3.hpp  streamvbyte_encode_vectorized.hpp  zigzag_encode.cpp  zigzag_encode_scalar.hpp  zigzag_encode_ssse3.hpp  zigzag_encode_vectorized.hpp
src/util/: decode_shuffle_table_generator.cpp  encode_shuffle_table_generator.cpp  length_table_generator.cpp
tests/: test.cpp  test.py
