[tool.poetry]
name = "libstreamvbyte"
version = "0.1.0"
description = "A C++ implementation with Python binding for StreamVByte"
authors = ["HSING-HAN WU (Xyphuz) <xyphuzwu@gmail.com>"]
readme = "README.md"
packages = [
    { include = "libstreamvbyte" },
]
include = [
    { path = "libstreamvbyte/*.so", format = "wheel" },
    { path = "libstreamvbyte/*.pyd", format = "wheel" },
]

[tool.poetry.build]
generate-setup-file=false
script="build.py"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.6.3"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*"]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
