[tool.poetry]
name = "libstreamvbyte"
version = "0.3.7"
description = "A C++ implementation of StreamVByte, with Python bindings."
authors = ["HSING-HAN WU (Xyphuz) <xyphuzwu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^65.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
numpy = "^1.23.5"

[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"
